# codecrafters-kafka-python

./: README.md  pyproject.toml
app/: kafka_broker.py  kafka_client.py  main.py  model.py  test_api_versions_v4.py  test_kafka_broker.py  test_request_header_v2.py  test_request_v2.py
app/model/: base.py  headers.py  requests.py  responses.py
tests/: test_api_versions_v4.py  test_kafka_broker.py  test_request_header_v2.py  test_request_v2.py
