[tool.poetry]
name = "codecrafters-kafka-python"
version = "0.1.0"
description = ""
authors = ["lurumad <luisruizpavon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"

[tool.flake8]
ignore = ["E203"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
